// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root fading quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="ae9d0415"
          fill="none"
          height="24"
          viewBox="0 0 160 24"
          width="160"
        />
      </button>
      <div
        class="logoActions"
      >
        <button
          aria-label="Search"
          class="iconButton searchButton"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="Open sidebar"
          class="iconButton toggle"
          type="button"
        >
          <svg
            class="panelIcon"
            data-content="35f95b0c"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
    <nav
      aria-label="Main Navigation"
      class="topNav"
    >
      <button
        aria-label="New task"
        class="navItem newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          New task
        </span>
      </button>
      <button
        aria-label="Automations"
        class="navItem"
        type="button"
      >
        <svg
          data-content="04a7472f"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Automations
        </span>
      </button>
      <button
        aria-label="Design"
        class="navItem"
        type="button"
      >
        <svg
          data-content="d95f4712"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Design
        </span>
      </button>
    </nav>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="ae9d0415"
          fill="none"
          height="24"
          viewBox="0 0 160 24"
          width="160"
        />
      </button>
      <div
        class="logoActions"
      >
        <button
          aria-label="Search"
          class="iconButton searchButton"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="Collapse sidebar"
          class="iconButton toggle"
          type="button"
        >
          <svg
            class="panelIcon"
            data-content="35f95b0c"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
    <nav
      aria-label="Main Navigation"
      class="topNav"
    >
      <button
        aria-label="New task"
        class="navItem newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          New task
        </span>
      </button>
      <button
        aria-label="Automations"
        class="navItem"
        type="button"
      >
        <svg
          data-content="04a7472f"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Automations
        </span>
      </button>
      <button
        aria-label="Design"
        class="navItem"
        type="button"
      >
        <svg
          data-content="d95f4712"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          Design
        </span>
      </button>
    </nav>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <svg
          aria-hidden="true"
          data-content="ae9d0415"
          fill="none"
          height="24"
          viewBox="0 0 160 24"
          width="160"
        />
      </button>
      <div
        class="logoActions"
      >
        <button
          aria-label="搜索"
          class="iconButton searchButton"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="收起侧边栏"
          class="iconButton toggle"
          type="button"
        >
          <svg
            class="panelIcon"
            data-content="35f95b0c"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
    <nav
      aria-label="Main Navigation"
      class="topNav"
    >
      <button
        aria-label="新建任务"
        class="navItem newSession"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          新建任务
        </span>
      </button>
      <button
        aria-label="自动化"
        class="navItem"
        type="button"
      >
        <svg
          data-content="04a7472f"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          自动化
        </span>
      </button>
      <button
        aria-label="设计"
        class="navItem"
        type="button"
      >
        <svg
          data-content="d95f4712"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="navLabel"
        >
          设计
        </span>
      </button>
    </nav>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
